Endpoint actualizar producto

--- a/.env.example .env
+++ b/.env.example .env
@@ -1,10 +1,4 @@
-# Configuración de base de datos
+# Archivo de ejemplo para variables de entorno
+
+# Base de datos local SQLite
 DATABASE_URL=sqlite:///./tienda.db
-
-# Configuración del servidor
-APP_NAME="Sistema de Tienda Online"
-APP_VERSION="2.0"
-
-# Ejemplo de API Key
-API_KEY=tu_api_key_aqui
-
